# knowlege-manager-agent

./: .gitignore  main.py  pyproject.toml  qd_client.py  requirements.txt
mcp/: server.py
qdrant_storage/: raft_state.json
qdrant_storage/collections/my_collection1/: config.json
qdrant_storage/collections/my_collection1/0/: replica_state.json
qdrant_storage/collections/my_collection1/0/segments/557e4a5e-2cbf-4905-8e79-8d228dcf805f/payload_index/: IDENTITY  LOG  MANIFEST-000013
qdrant_storage/collections/my_collection1/0/segments/a1a4951e-1931-4bff-8903-50451e6bc8b9/: segment.json
qdrant_storage/collections/my_collection1/0/segments/a1a4951e-1931-4bff-8903-50451e6bc8b9/payload_index/: IDENTITY  LOG  MANIFEST-000013
